# Software-Supply-Chain-Security-Assignment-1

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  READNE.md  SECURITY.md  artifact.bundle  artifact.md  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
src/sscs_monitor/: main.py  merkle_proof.py  util.py
tests/: test_bandit_config_in_pyproject.py  test_help_flag.py  test_invalid_flag.py  test_missing_repo_path.py  test_pre_commit_config_exists.py  test_pre_commit_hook_runs.py  test_pyproject_toml_exists.py  test_scan_no_verification.py  test_scan_with_fail_flag.py  test_version_flag.py
