[tool.poetry]
name = "sscs-monitor"
version = "0.1.0"
description = "Python package for software supply chain monitoring"
authors = ["Gary <gfs7337@nyu.edu>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "sscs_monitor", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.31"
cryptography = "^46.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.11.0"
ruff = "^0.14.4"
flake8 = "^7.3.0"
pylint = "^4.0.2"
bandit = "^1.8.6"
autodocstring = "^0.1.2"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
sscs-monitor = "sscs_monitor.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = ">=3.13"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=."
testpaths = ["tests"]

